Fixed list of allowed image formats in image selector dialog
Fixed crash with Ctrl+K on empty paragraph
Fixed consecutive tab problems
Workaround for slow clipboard format checking in Qt2 
Hack around Tru64-compiler bug (KWTextFormat::~KWTextFormat())

Changes between KWord-1.1.1 and KWord-1.2-beta1
===============================================

Text layout and painting redesigned around WYSIWYG concept.
KWord is also BiDi-enabled.

Soft hyphens (inserted with Ctrl+'-')
Non-breakable-spaces (inserted with Ctrl+' ' or menuitem)
Support for hyperlinks, for text background color (marker).
Improved handling of tabulators in ruler.
Auto-hide mouse cursor while typing.

"Change picture" feature.
SVG support (for cliparts).
Module for SVG previews in Konqueror.

Rewrite of tables where positioning is much more fool-proof and table-borders actually work.
More intelligent table-cell-scaling for cells with mixed text lengths

Text shadow feature.
Double-underline feature.
Ability to choose where to inline a frame.
Setting tabs via the rulers is more intuitive.
Add link (internet link/ address mail / file link)
Add dcop interface : now we can insert text, change text format, etc...
Frame z-order ("Raise frame", "Lower frame")
Preliminary support for background spell checking
Support for manual completion (use CTRL+E)
Support for note
Ability to associate key shortcuts to styles
"Section Title" variable

Triple click selects a paragraph.
New "PageUp/PageDown moves the caret" option, which defaults to false.
 The new behaviour for PageUp/PageDown is to move the scrollbars, not the caret.

Changes between KWord-1.2-beta1 and KWord-1.2-beta2
===================================================
- Add support for "Apply autoformat"
- Add support for find/replace with format
- Now we can create style directly from selection
- Paragraph selection, clicking on the left of the text frame
- Add "protect content" feature
- Add double line boder type